static pages finished

--- a/app/views/staticpages/home.html.erb
+++ b/app/views/staticpages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Staticpages#home</h1>
-<p>Find me in app/views/staticpages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+
+		<h1>Sample App</h1>
+		<p>Find me in app/views/staticpages/home.html.erb</p>
+
